[gd_scene load_steps=10 format=1]

[ext_resource path="res://ChooseShip.gd" type="Script" id=1]
[ext_resource path="res://font/SF Atarian System.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://playerShips/redship.png" type="Texture" id=3]
[ext_resource path="res://playerShips/greenship.png" type="Texture" id=4]
[ext_resource path="res://playerShips/blueship.png" type="Texture" id=5]
[ext_resource path="res://playerShips/yellowship.png" type="Texture" id=6]
[ext_resource path="res://playerShips/purpleship.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 36
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="ChooseShip" type="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 1017.0
margin/bottom = 593.0

[node name="Label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 41.0
margin/top = 25.0
margin/right = 81.0
margin/bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Choose your ship"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RedButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 137.0
margin/top = 233.0
margin/right = 242.0
margin/bottom = 367.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = false

[node name="GreenButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 297.0
margin/top = 233.0
margin/right = 402.0
margin/bottom = 367.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = false

[node name="BlueButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 457.0
margin/top = 233.0
margin/right = 562.0
margin/bottom = 367.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="YellowButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 617.0
margin/top = 233.0
margin/right = 722.0
margin/bottom = 367.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = false

[node name="PurpleButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 777.0
margin/top = 233.0
margin/right = 882.0
margin/bottom = 367.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = false

[node name="BackButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 857.0
margin/top = 505.0
margin/right = 899.0
margin/bottom = 525.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[connection signal="pressed" from="Panel/RedButton" to="." method="_onRedShip"]

[connection signal="pressed" from="Panel/GreenButton" to="." method="_onGreenShip"]

[connection signal="pressed" from="Panel/BlueButton" to="." method="_onBlueShip"]

[connection signal="pressed" from="Panel/YellowButton" to="." method="_onYellowShip"]

[connection signal="pressed" from="Panel/PurpleButton" to="." method="_onPurpleShip"]

[connection signal="pressed" from="Panel/BackButton" to="." method="_onBack"]


